# liblocus

./: CMakeLists.txt  LICENSE  README.md
docs/: .$Generation Architecture.drawio.bkp  Generation Architecture.drawio
include/: seededrandomgenerator.hpp  worldgenerator.hpp
include/generation/: generationlayer.hpp  namegenerator.hpp
include/random/: seededrandomgenerator.hpp
include/utils/: commonnamedictionaryprovider.hpp  inamedictionaryprovider.hpp
include/world/: iworldobject.hpp
resources/text-generation/: place-part-1.txt  place-part-2.txt  place-part-3.txt
src/: placeholder.cpp  seededrandomgenerator.cpp
src/generation/: namegenerator.cpp
src/random/: seededrandomgenerator.cpp
src/utils/: commonnamedictionaryprovider.cpp
tests/: CMakeLists.txt  seededrandomgenerator.cpp
visualiser/src/: main.cpp  main.cpp.in
